site/api/4.00/type_MoreLabels.Hashtbl.SeededS.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.00</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="MoreLabels.Hashtbl.SeededS.html">MoreLabels.Hashtbl.SeededS</a></div><ul></ul></nav></header>
<code class="code"><span class="keyword">sig</span><br>
&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;key<br>
&nbsp;&nbsp;<span class="keyword">and</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;t<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;create&nbsp;:&nbsp;?random:bool&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;int&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;clear&nbsp;:&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;reset&nbsp;:&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;copy&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;add&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;key:<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;data:<span class="keywordsign">'</span>a&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;remove&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;find&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>a<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;find_all&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;list<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;replace&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;key:<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;data:<span class="keywordsign">'</span>a&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;mem&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;bool<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;iter&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;f:(key:<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;data:<span class="keywordsign">'</span>a&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit)&nbsp;<span class="keywordsign">-&gt;</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;fold&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;f:(key:<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.key&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;data:<span class="keywordsign">'</span>a&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>b&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>b)&nbsp;<span class="keywordsign">-&gt;</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;init:<span class="keywordsign">'</span>b&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>b<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;length&nbsp;:&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;int<br>
&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;stats&nbsp;:<br>
&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.<span class="constructor">SeededS</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">MoreLabels</span>.<span class="constructor">Hashtbl</span>.statistics<br>
<span class="keyword">end</span></code><div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>